--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An empty module, a clean slate.",
   "main": "index.ts",
   "scripts": {
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "test:coverage": "jest --coverage",
     "test": "jest"
   },
@@ -17,12 +17,10 @@
     "@babel/preset-typescript": "^7.8.3",
     "@types/jest": "^25.1.3",
     "@types/lodash": "^4.14.149",
-    "@types/redux": "^3.6.0",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "jest": "^25.1.0",
     "lodash": "^4.17.15",
-    "redux-saga": "^1.1.3",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.2"
   },
@@ -32,10 +30,12 @@
     "babel-jest": "^25.1.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb-typescript": "^7.0.0",
+    "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.15.1",
-    "eslint-plugin-react-hooks": "^1.7.0"
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "prettier": "^1.19.1"
   }
 }
-
