--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,7 +39,10 @@
       }
     ],
     "no-unused-vars": [
-      "warn"
+      "warn",
+      {
+        "args": "none"
+      }
     ],
     "operator-linebreak": [
       "error",
