--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -58,6 +58,12 @@
     "class-methods-use-this": "off",
     "comma-dangle": 0,
     "arrow-parens": 0,
-    "@typescript-eslint/no-explicit-any": 0
+    "@typescript-eslint/no-explicit-any": 0,
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "args": "none"
+      }
+    ]
   }
 }
