--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "esModuleInterop": true,
     "rootDir": "src",
     "outDir": "build",
+    "declaration": true
     "strict": true,
     "noImplicitAny": true,
     "resolveJsonModule": true,
