--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "yarn build:types && yarn build:js",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "prepublish": "type-check && build",
+    "prepublish": "yarn type-check && yarn build",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "test:coverage": "jest --coverage",
     "test": "jest"
