--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "@babel/core": "^7.0",
+    "@babel/cli": "^7.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@types/jest": "^25.1.3",
     "@types/lodash": "^4.14.149",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.26.0",
     "jest": "^25.1.0",
     "lodash": "^4.17.15",
     "ts-jest": "^25.2.1",
