--- a/package.json
+++ b/package.json
@@ -17,15 +17,18 @@
   "author": "Binary Agents",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.0",
     "@babel/cli": "^7.0",
+    "@babel/core": "^7.0",
     "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
     "@types/jest": "^25.1.3",
     "@types/lodash": "^4.14.149",
+    "core-js": "2.x",
     "jest": "^25.1.0",
+    "jest-cli": "^25.1.0",
     "lodash": "^4.17.15",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.2"
