--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     "allowJs": false,
     "esModuleInterop": true,
     "rootDir": "src",
-    "outDir": "build",
+    "outDir": "dist",
     "declaration": true,
     "strict": true,
     "noImplicitAny": true,
