* Add plugin jsdoc (valid-jsdoc rule deprecated). * Add presets for jsdoc. * Add comma dangle rule. (results in more coherent diffs, matches default rule for typescript interfaces.) * Remove no-plusplus. (yes-plusplus. The rationale for no-plusplus are based on the code already being problematic.) * Remove valid-jsdoc. (deprecated) * Ignore yarn.error files.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,12 +3,15 @@
   "parser": "@typescript-eslint/parser",
   "plugins": [
     "@typescript-eslint",
+    "jsdoc",
     "prettier"
   ],
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/eslint-recommended",
     "plugin:@typescript-eslint/recommended",
+    "plugin:jsdoc/recommended",
+    "plugin:react/recommended",
     "prettier/@typescript-eslint"
   ],
   "parserOptions": {
@@ -16,26 +19,13 @@
   },
   "rules": {
     "prettier/prettier": "error",
+    "comma-dangle": ["error", "always"],
     "consistent-return": ["off"],
     "no-underscore-dangle": ["off"],
     "max-nested-callbacks": ["warn", 3],
-    "no-plusplus": [
-      "warn", {
-        "allowForLoopAfterthoughts": true
-      }
-    ],
+    "no-plusplus": ["off"],
     "no-param-reassign": ["off"],
     "no-prototype-builtins": ["off"],
-    "valid-jsdoc": [
-      "warn",
-      {
-        "prefer": {
-          "returns": "return",
-          "property": "prop"
-        },
-        "requireReturn": false
-      }
-    ],
     "no-unused-vars": [
       "warn",
       {
