--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Node modules.
 /node_modules
 
-# Jetbrains configuration.
+# Editor configuration.
 /.idea
 
 # Reports.
 *.log
 /coverage
+yarn.error
