--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "type-check": "tsc --noEmit",
     "build": "yarn build:types && yarn build:js",
     "build:types": "tsc --emitDeclarationOnly",
-    "build:js": "babel src --out-dir lib --extensions \".ts,.tsx\" --source-maps inline",
-    "prepublish": "yarn type-check && yarn build",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "test:coverage": "jest --coverage",
+    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "test": "jest"
   },
   "author": "Binary Agents",
