--- a/package.json
+++ b/package.json
@@ -6,9 +6,31 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.0",
+    "@types/node": "^14.0.13",
+    "@types/react": "^16.9.36",
+    "@types/react-calendar-timeline": "^0.26.2",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/redux": "^3.6.0",
+    "antd": "^4.3.3",
+    "classnames": "^2.2.6",
+    "components": "0.0.58",
+    "core-js": "^3.6.5",
+    "duckies": "^0.0",
+    "interactjs": "^1.9.19",
+    "moment": "^2.26.0",
+    "primeflex": "^1.1.1",
+    "primeicons": "^4.0.0-rc.2",
+    "primereact": "^4.2.2",
     "react": "^16.13.1",
+    "react-calendar-timeline": "^0.27.0",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "react-transition-group": "^4.4.1",
+    "redux": "^4.0.5",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
