--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/faker": "^4.1.12",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
@@ -13,11 +14,13 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/redux": "^3.6.0",
+    "@types/seedrandom": "^2.4.28",
     "antd": "^4.3.3",
     "classnames": "^2.2.6",
     "components": "^0.0",
     "core-js": "^3.6.5",
     "duckies": "^0.0",
+    "faker": "^4.1.0",
     "interactjs": "^1.9.19",
     "moment": "^2.26.0",
     "primeflex": "^1.1.1",
@@ -30,6 +33,7 @@
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "seedrandom": "^3.0.5",
     "typescript": "^3.9.5"
   },
   "scripts": {
