* Installed @Material-UI/core and @Material-UI/icons * Installed the material-icons-font * Installed fontsource * Included the Roboto and material-icons fonts in the App component * Updated the viewport meta tag in index.html to accommodate Matrial UI * Added the Material UI CSSBaseline component to the App comonent for global styling

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "duckies": "^0.0",
     "fontsource-roboto": "^3.0.3",
     "interactjs": "^1.9.19",
+    "material-icons-font": "^2.1.0",
     "moment": "^2.26.0",
     "primeflex": "^1.1.1",
     "primeicons": "^4.0.0-rc.2",
