--- a/package.json
+++ b/package.json
@@ -3,44 +3,65 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^4.3.3",
+    "core-js": "^3.6.5",
+    "interactjs": "^1.9.19",
+    "moment": "^2.26.0",
+    "react": "^16.13.1",
+    "react-calendar-timeline": "^0.27.0",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
+    "@babel/preset-react": "^7.12.5",
+    "@babel/preset-typescript": "^7.12.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^26.0.0",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.0.13",
     "@types/react": "^16.9.36",
     "@types/react-calendar-timeline": "^0.26.2",
     "@types/react-dom": "^16.9.8",
-    "@types/react-redux": "^7.1.9",
-    "@types/redux": "^3.6.0",
-    "antd": "^4.3.3",
-    "classnames": "^2.2.6",
-    "components": "^0.0",
-    "core-js": "^3.6.5",
-    "duckies": "^0.0",
-    "interactjs": "^1.9.19",
-    "moment": "^2.26.0",
-    "primeflex": "^1.1.1",
-    "primeicons": "^4.0.0-rc.2",
-    "primereact": "^4.2.2",
-    "react": "^16.13.1",
-    "react-calendar-timeline": "^0.27.0",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
-    "react-transition-group": "^4.4.1",
-    "redux": "^4.0.5",
-    "time-entry": "^0.0",
-    "typescript": "^3.9.5"
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "@typescript-eslint/parser": "^4.6.1",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.12.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "file-loader": "^6.2.0",
+    "jest": "^26.6.3",
+    "node-sass": "^5.0.0",
+    "path": "^0.12.7",
+    "prettier": "^2.1.2",
+    "sass": "^1.28.0",
+    "sass-loader": "^10.0.5",
+    "style-loader": "^2.0.0",
+    "typescript": "^3.9.5",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "type-check": "tsc --noEmit",
+    "prebuild": "npm run type-check && rm -rf ./build",
+    "build": "./node_modules/.bin/webpack --mode=${NODE_ENV}",
+    "build:types": "tsc --emitDeclarationOnly",
+    "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
+    "prepublish": "npm run build",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "test:coverage": "jest --coverage",
+    "test": "jest",
+    "watch": "npm run build --watch"
   },
   "browserslist": {
     "production": [
