--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.5",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "antd": "^4.3.3",
     "core-js": "^3.6.5",
     "fontsource-roboto": "^3.0.3",
+    "graphql": "^15.4.0",
     "interactjs": "^1.9.19",
     "moment": "^2.26.0",
     "react": "^16.13.1",
