--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "moment": "^2.26.0",
     "react": "^16.13.1",
     "react-calendar-timeline": "^0.27.0",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-window": "^1.8.6",
+    "react-window-infinite-loader": "^1.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
@@ -33,6 +35,7 @@
     "@types/react": "^16.9.36",
     "@types/react-calendar-timeline": "^0.26.2",
     "@types/react-dom": "^16.9.8",
+    "@types/react-window": "^1.8.2",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "babel-loader": "^8.1.0",
@@ -53,7 +56,7 @@
     "sass": "^1.28.0",
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
-    "typescript": "^3.9.5",
+    "typescript": "^3.9.7",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.2.0"
   },
