--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-calendar-timeline": "^0.27.0",
     "react-dom": "^16.13.1",
     "react-window": "^1.8.6",
-    "react-window-infinite-loader": "^1.0.5"
+    "react-window-infinite-loader": "^1.0.5",
+    "time-entry": "^0.1.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.12.1",
