--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "node-scaffold",
+  "name": "schedule-app-react",
   "version": "0.0.0",
-  "description": "An empty module, a clean slate.",
+  "description": "A Schedule App.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "build": "yarn build:types && yarn build:js",
+    "build": "rm -rf ./build && ./node_modules/.bin/webpack --mode=development",
     "build:types": "tsc --emitDeclarationOnly",
     "build:js": "babel src --out-dir dist --extensions \".ts,.tsx\" --source-maps inline",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -22,12 +22,32 @@
     "@babel/preset-env": "^7.8.7",
     "@babel/preset-react": "^7.8.3",
     "@babel/preset-typescript": "^7.8.3",
+    "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.5",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/enzyme-to-json": "^1.5.3",
     "@types/jest": "^25.1.3",
     "@types/lodash": "^4.14.149",
+    "@types/react": "^16.9.36",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-test-renderer": "^16.9.2",
+    "@types/testing-library__jest-dom": "^5.9.1",
+    "classnames": "^2.2.6",
     "core-js": "3.x",
+    "duckies": "0.0.41",
     "jest": "^25.1.0",
     "jest-cli": "^25.1.0",
     "lodash": "^4.17.15",
+    "moment": "^2.26.0",
+    "primeicons": "^4.0.0-rc.2",
+    "primereact": "^4.2.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-shallow-testutils": "^3.0.1",
+    "react-test-renderer": "^16.13.1",
+    "redux": "^4.0.5",
     "ts-jest": "^25.2.1",
     "typescript": "^3.8.2"
   },
@@ -35,6 +55,8 @@
     "@typescript-eslint/eslint-plugin": "^2.23.0",
     "@typescript-eslint/parser": "^2.23.0",
     "babel-jest": "^25.1.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.18.2",
@@ -43,6 +65,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.15.1",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "prettier": "^1.19.1"
+    "file-loader": "^6.0.0",
+    "prettier": "^1.19.1",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
   }
 }
